--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,14 +2,13 @@ micronaut:
   application:
     name: product-service
 
-#Fri Jan 17 18:54:43 UTC 2025
-#datasources:
-#  default:
-#    url: jdbc\:h2\:mem\:devDb;LOCK_TIMEOUT\=10000;DB_CLOSE_ON_EXIT\=FALSE
-#    driverClassName: org.h2.Driver
-#    username: sa
-#    password: ''
-#    dialect: H2
+datasources:
+  default:
+    url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    username: sa
+    password: ''
+    dialect: H2
 
 jpa:
   default:
