--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -23,5 +23,11 @@ jpa:
     properties:
       hibernate:
         hbm2ddl:
-          auto: update
+          auto: none
+        show_sql: true
+
+flyway:
+  datasources:
+    default:
+      enabled: true
 
