--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,10 @@ micronaut:
 
 datasources:
   default:
-    url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-    dialect: H2
+    url: jdbc:postgresql://localhost:5432/${POSTGRES_DB}
+    driverClassName: org.postgresql.Driver
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
 
 jpa:
   default:
